# netcdf4-python

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  COPYING  Changelog  MANIFEST.in  Makefile  PKG-INFO  README  README.gh-pages  README.htmldocs  README.macosx  README.md  README.parallel  README.pydap  README.release  README.wheels.md  api-objects.txt  appveyor.yml  checkversion.py  class-tree.html  conf.py  constants.pyx  create_docs.sh  docs.md  help.html  identifier-index.html  index.html  index.rst  module-tree.html  netCDF3-module.html  netCDF3.Dataset-class.html  netCDF3.Dimension-class.html  netCDF3.MFDataset-class.html  netCDF3.c  netCDF3.pxi  netCDF3.pyx  (+49 more)
.ci/: build_deps.sh
.github/: stubtest-allowlist
.github/workflows/: build.yml  build_latest.yml  build_master.yml  build_old.yml  cibuildwheel.yml  linux-tests-mpi.yml  linux-tests-serial.yml  linux-tests.yml  miniconda-win.yml  miniconda.yml  stubtest.yml
MFDataset/: MFDataset.py  __init__.py
MFnetCDF4/: MFnetCDF4.py  __init__.py
MFnetCDF4_classic/: MFnetCDF4.py  MFnetCDF4_classic.py
_build/: backend.py  utils.py
ci/: build-parallel-netcdf.sh
ci/travis/: build-parallel-netcdf.sh
conda.recipe/: bld.bat  build.sh  meta.yaml  run_test.py
docs/: MFDataset.MFDataset-module.html  MFDataset.MFDataset-pysrc.html  MFDataset.MFDataset.Dataset-class.html  MFDataset.MFDataset._Dimension-class.html  MFDataset.MFDataset._Variable-class.html  MFnetCDF4.MFnetCDF4-module.html  MFnetCDF4.MFnetCDF4-pysrc.html  MFnetCDF4.MFnetCDF4.Dataset-class.html  MFnetCDF4_classic.MFnetCDF4_classic-module.html  MFnetCDF4_classic.MFnetCDF4_classic-pysrc.html  MFnetCDF4_classic.MFnetCDF4_classic.Dataset-class.html  MFnetCDF4_classic.MFnetCDF4_classic._Dimension-class.html  MFnetCDF4_classic.MFnetCDF4_classic._Variable-class.html  api-objects.txt  class-tree.html  epydoc.css  epydoc.js  help.html  identifier-index.html  index.html  module-tree.html  netCDF3-module.html  netCDF3.Dataset-class.html  netCDF3.Dimension-class.html  netCDF3.MFDataset-class.html  netCDF3.Variable-class.html  netCDF4-module.html  netCDF4.CompoundType-class.html  netCDF4.Dataset-class.html  netCDF4.Dimension-class.html  netCDF4.Group-class.html  netCDF4.MFDataset-class.html  netCDF4.MFTime-class.html  netCDF4.UserType-class.html  netCDF4.VLType-class.html  netCDF4.Variable-class.html  netCDF4._netCDF4-module.html  netCDF4._netCDF4.Group-class.html  netCDF4._netCDF4.MFDataset-class.html  netCDF4._netCDF4.MFTime-class.html  (+20 more)
docs/netCDF4/: index.html
examples/: README  README.md  bench-nc3.py  bench.py  bench_compress.py  bench_compress2.py  bench_compress3.py  bench_compress4.py  bench_diskless.py  complex.py  complex_numbers.py  ex_atts.py  ex_classic.py  ex_compound.py  ex_dims.py  ex_grps.py  ex_netcdftime.py  ex_rename.py  ex_scalarvar.py  ex_string.py  ex_types.py  ex_unlimdim.py  ex_vars.py  ex_vlen.py  json_att.py  mpi_example.py  mpi_example_compressed.py  parallel_test.nc  parallel_test_compressed.nc  reading_netCDF.ipynb  run_all.py  subset.py  test_stringarr.py  threaded_read.py  tst_classic.nc  tutorial-nc3.py  tutorial.py  tutorial_simple.py  writing_netCDF.ipynb
examples_classic/: bench.py  bench2.py  compression.py  ex_atts.py  ex_classic.py  ex_dims.py  ex_rename.py  ex_scalarvar.py  ex_types.py  ex_unlimdim.py  ex_vars.py  pres_temp_4D_rd.py  pres_temp_4D_wr.py  run_all.py  sfc_pres_temp_rd.py  sfc_pres_temp_wr.py  simple_xy_rd.py  simple_xy_wr.py  tutorial.py  tutorial_nc3.py
include/: constants.pyx  membuf.pyx  mpi-compat.h  netCDF4.pxi  netcdf-compat.h  no_parallel_support_imports.pxi.in  parallel_support_imports.pxi.in  utils.pyx
man/: nc3tonc4.1  nc4tonc3.1  ncinfo.1
netCDF4/: __init__.py  _netCDF4.c  _netCDF4.pyx  utils.py
netcdftime/: __init__.py  _datetime.c  _datetime.pyx  _netcdftime.c  _netcdftime.pyx  netcdftime.py
ports/: PortIndex  PortIndex.quick  README
ports/python/py-netcdf4/: Portfile
pygrib/: pygrib.c  pygrib.pyx  setup.py  test.py
pygrib/test/: test_ectigge.py  test_eumetsat.py  test_lambert.py  test_merc.py  test_ndfd_pr.py  test_stere.py
src/netCDF4/: __init__.py  __init__.pyi  _netCDF4.pyi  _netCDF4.pyx  utils.py
test/: 20171025_2056.Cloud_Top_Height.nc  CRM032_test1.nc  filter_availability.py  issue1152.nc  issue671.nc  issue672.nc  netcdf_dummy_file.nc  run_all.py  test_Unsigned.py  test_alignment.py  test_cdf5.py  test_cdl.py  test_chunk_cache.py  test_complex.py  test_compound_alignment.py  test_compoundatt.py  test_compoundvar.py  test_compression.py  test_compression_blosc.py  test_compression_bzip2.py  test_compression_quant.py  test_compression_szip.py  test_compression_zstd.py  test_create_mem.py  test_dap.py  test_dims.py  test_diskless.py  test_endian.py  test_enum.py  test_fancyslicing.py  test_filepath.py  test_get_fill_value.py  test_get_variables_by_attributes.py  test_gold.nc  test_grps2.py  test_issue908.py  test_masked.py  test_masked2.py  test_masked3.py  test_masked4.py  (+77 more)
test3/: tst_atts.py  tst_dims.py  tst_fancyslicing.py  tst_masked.py  tst_masked2.py  tst_multifile.py  tst_rename.py  tst_scalarvar.py  tst_slicing.py  tst_stringarr.py  tst_types.py  tst_unlimdim.py  tst_vars.py
test_classic/: run_all.py  tst_atts.py  tst_compression.py  tst_dims.py  tst_multifile.py  tst_rename.py  tst_scalarvar.py  tst_slicing.py  tst_types.py  tst_unlimdim.py  tst_vars.py
utils/: grib2nc4  nc3tonc4  nc4tonc3  ncinfo
